sylvander-tui/tests/snapshots/snapshots__design_waiting_approval_state_120x36.snap
---
source: sylvander-tui/tests/snapshots.rs
expression: "render_buf(s, 120, 36)"
---
              ⢀⣤⣴⡆               Sylvander                                                                              
            ⢀⣚⣿⣿⣿⣿⢓⣀             agent workspace                                                                        
         ⢀⣴⣾⢿⣳⡿⠛⠙⢿⣾⣿⣷⣦           model     —                                                                            
  ⢀ ⣴⠆  ⣰⣿⣿⣵⠟⠉    ⠙⠻⣿⠿⣾⣦         workspace ~/workspace                                                                  
 ⠈⠛⠃⡁⡀  ⣿⡻⢾⡇ ⣶⣶  ⣶⣆ ⢻⣥⣿⣿⡄        branch    — · session new                                                              
 ⢀⣤⣶⣿⡣⣤⢀⢽⠿⣮⢷⣄⣉⠁  ⠉⣁⣤⡎⣵⠟⣭⣁⡔⢿⣄⡀                                                                                           
 ⣾⣿⠛⢹⡇⠈⢨⣶⡶⠎⢛⡿⣿⣳⡆⣶⣿⡿⣟⣋⢷⣶⣮⡅⢸⡜⢿⣿⡄   What should we work through?                                                           
 ⠈⠻⠁   ⠘⠞⠁ ⠒⠁ ⠉⠁⠉⠉ ⠉⠑ ⠈⣿⠇ ⠁⠈⠿⠁                                                                                          
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
❯                                                                                                                       
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
  ◆ Permission needed                                                                                     1 of 1        
  Run command                                                                                                           
  $ rm -rf /                                                                                                            
  Critical · may destroy data or repository state · current workspace                                                   
                                                                                                                        
  › 1. Deny  recommended for critical operations                                                                        
    2. Allow once                                                                                                       
                                                                                                                        
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
● approval · model — · branch — · session — · 0 tok                                     ↑↓ select   ↵ confirm · esc deny
