sylvander-tui/tests/snapshots/snapshots__empty_question_submission_stays_open_with_feedback.snap
---
source: sylvander-tui/tests/snapshots.rs
assertion_line: 934
expression: "render_buf(state, 110, 30)"
---
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
──────────────────────────────────────────────────────────────────────────────────────────────────────────────
>                                                                                                             
──────────────────────────────────────────────────────────────────────────────────────────────────────────────
  ◆ Your input is needed                                                                                      
  Describe the desired behavior                                                                               
                                                                                                              
  >                                                                                                           
  ! Choose an option, type an answer, or press Esc to skip                                                    
  Type your answer · ↵ submit · esc return                                                                    
──────────────────────────────────────────────────────────────────────────────────────────────────────────────
◌ connecting · model — · branch —                                                    connecting…   draft local
