sylvander-tui/tests/snapshots/snapshots__empty_terminal_at_startup.snap
---
source: sylvander-tui/tests/snapshots.rs
expression: "render_buf(state, 80, 24)"
---
        ⢀⣠⣶⣾⣀           Sylvander                                               
      ⣠⣴⣶⣾⠿⢿⣷⣶⣤⡀        agent workspace                                         
⢀⣄⡴⠆ ⣴⣿⣿⠋⣁ ⢀⡙⢻⣟⣿⡆                                                               
 ⣩⣶⣆⡀⣿⣿⣯⡘⠿ ⠸⠟⣠⣿⣿⡻⣠⣄⡀    model     —                                             
⢾⣟⢻⠇⢋⣿⡾⢻⡿⣷⡆⣾⡿⣿⡿⣾⣯⠹⡿⣿⡄   workspace ~/workspace                                   
 ⠁   ⠋ ⠈      ⠁⠈⠋  ⠘    branch    — · session new                               
                        What should we work through?                            
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
────────────────────────────────────────────────────────────────────────────────
❯                                                                               
────────────────────────────────────────────────────────────────────────────────
◌ connecting · model — · branch — · session —
