sylvander-tui/tests/snapshots/snapshots__expanded_tasks_show_identity_state_and_latest_detail.snap
---
source: sylvander-tui/tests/snapshots.rs
expression: "render_buf(s, 80, 24)"
---
              ⢀⣤⣴⡆               Sylvander                                      
            ⢀⣚⣿⣿⣿⣿⢓⣀             agent workspace                                
         ⢀⣴⣾⢿⣳⡿⠛⠙⢿⣾⣿⣷⣦           model     —                                    
  ⢀ ⣴⠆  ⣰⣿⣿⣵⠟⠉    ⠙⠻⣿⠿⣾⣦         workspace ~/workspace                          
 ⠈⠛⠃⡁⡀  ⣿⡻⢾⡇ ⣶⣶  ⣶⣆ ⢻⣥⣿⣿⡄        branch    — · session new                      
 ⢀⣤⣶⣿⡣⣤⢀⢽⠿⣮⢷⣄⣉⠁  ⠉⣁⣤⡎⣵⠟⣭⣁⡔⢿⣄⡀                                                   
 ⣾⣿⠛⢹⡇⠈⢨⣶⡶⠎⢛⡿⣿⣳⡆⣶⣿⡿⣟⣋⢷⣶⣮⡅⢸⡜⢿⣿⡄   What should we work through?                   
 ⠈⠻⠁   ⠘⠞⠁ ⠒⠁ ⠉⠁⠉⠉ ⠉⠑ ⠈⣿⠇ ⠁⠈⠿⠁                                                  
                                                                                
▶ tasks 1/2 done · 1 running                                                    
  ● inspect auth middleware · a1b2c3d4                                          
    running read                                                                
  ✓ check test coverage · e5f6g7h8                                              
    coverage gaps found in refresh flow                                         
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
────────────────────────────────────────────────────────────────────────────────
❯                                                                               
────────────────────────────────────────────────────────────────────────────────
◌ connecting · model — · branch — · session —
