sylvander-tui/tests/snapshots/snapshots__expanded_tool_details_show_structured_input_and_output.snap
---
source: sylvander-tui/tests/snapshots.rs
assertion_line: 896
expression: "render_buf(state, 110, 30)"
---
                     ⢀⣠⢠⡖                                                                                     
                  ⢀⣠⣶⣿⡇⣿⣷⣤⣀                     Sylvander                                                     
                ⢀⣠⣤⠄⣿⣿⡇⣿⣿⡇⣤⣤⡀                   agent workspace                                               
             ⢀⣴⣶⣿⠿⣋⣾⡿⠛⠁⠙⢿⣷⣜⢿⣿⣾⣦⠄                                                                              
      ⣠⣤    ⣠⣿⣿⠟⣡⡾⠛⠉     ⠉⠻⢿⣬⡻⣿⡌⣧⡀              model     —                                                   
  ⢠⣴⣄⠸⠛⠉   ⢰⣿⣿⡃⣿⡟  ⣀⡀   ⢀⡀  ⢹⣷⠄⣾⣿⣿              workspace ~/workspace                                         
   ⠈⠁⠠⡀⣀   ⢰⣦⡙⠇⣿⠁ ⢸⣿⣿   ⣿⣿⡆  ⣿⡦⢏⣵⣶⡆             branch    —                                                   
   ⣠⣔⣚⠿⠏⣠⣄ ⢈⣙⢿⣦⡩⣷⣀ ⠉⠁   ⠈⠉ ⣀⣴⠌⣴⡿⢋⣤⠁⢀⠲⠿⢤⡀        session   new                                                 
 ⢀⣼⣿⣿⠟⠼⣷ ⠏⠘⢂⡡⢤⣌⠳⠮⣝⡻⢷⣤⣄ ⣠⣴⣾⠿⣛⣥⠞⣫⡤⢌⡑⠛⠉⣶⠸⣿⣿⣷                                                                     
 ⠘⢿⡟⡄ ⠸⠃  ⢠⡛⠿⡆⠉ ⡐⠬⠙⠳⠌⣟ ⣿⡿⠽⠋⢥⡶⢂⠙⠱⠿⢟⡃ ⠙⡇⠈⢹⣿⡇      What should we work through?                                  
   ⠙       ⠻⠁   ⠉            ⠋  ⠈⡿⠃     ⠟                                                                     
                                                                                                              
❯ run the tests                                                                                               
⏺ Run `cargo`     00s                                                                                         
  ⎿  $ cargo test -p sylvander-tui --locked                                                                   
     cwd  /workspace/Sylvander                                                                                
     $ cargo test -p sylvander-tui --locked                                                                   
                                                                                                              
     result                                                                                                   
       running 130 tests                                                                                      
       test result: ok. 130 passed                                                                            
       finished in 0.12s                                                                                      
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
──────────────────────────────────────────────────────────────────────────────────────────────────────────────
❯                                                                                                             
──────────────────────────────────────────────────────────────────────────────────────────────────────────────
◌ working · model — · branch —                                                          esc interrupt   /draft
