sylvander-tui/tests/snapshots/snapshots__explicit_plan_revision_uses_review_view.snap
---
source: sylvander-tui/tests/snapshots.rs
expression: "render_buf(state, 100, 30)"
---
  Plan editor                                                                              3 steps  
────────────────────────────────────────────────────────────────────────────────────────────────────
    1. Preserve the single-session shell                                                            
  › 2. Replace centered decisions with the Decision Dock                                            
    3. Verify standard and narrow layouts                                                           
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
────────────────────────────────────────────────────────────────────────────────────────────────────
e edit step   a add below   d remove                                                                
● editing plan · model — · branch —                                      ↑↓ step   ↵ done · esc back
