sylvander-tui/tests/snapshots/snapshots__file_mention_picker_is_a_focused_workspace_surface.snap
---
source: sylvander-tui/tests/snapshots.rs
expression: "render_buf(state, 90, 24)"
---
              ⢀⣤⣴⡆               Sylvander                                                
            ⢀⣚⣿⣿⣿⣿⢓⣀             agent workspace                                          
         ⢀⣴⣾⢿⣳⡿⠛⠙⢿⣾⣿⣷⣦           model     —                                              
  ⢀ ⣴⠆  ⣰⣿⣿⣵⠟⠉    ⠙⠻⣿⠿⣾⣦         workspace ~/workspace                                    
 ⠈⠛⠃⡁⡀  ⣿⡻⢾⡇ ⣶⣶  ⣶⣆ ⢻⣥⣿⣿⡄        branch    — · session new                                
 ⢀⣤⣶⣿⡣⣤⢀⢽⠿⣮⢷⣄⣉⠁  ⠉⣁⣤⡎⣵⠟⣭⣁⡔⢿⣄⡀                                                             
 ⣾⣿⠛⢹⡇⠈⢨⣶⡶⠎⢛⡿⣿⣳⡆⣶⣿⡿⣟⣋⢷⣶⣮⡅⢸⡜⢿⣿⡄   What should we work through?                             
 ⠈⠻⠁   ⠘⠞⠁ ⠒⠁ ⠉⠁⠉⠉ ⠉⠑ ⠈⣿⠇ ⠁⠈⠿⠁                                                            
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
──────────────────────────────────────────────────────────────────────────────────────────
❯                                                                                         
──────────────────────────────────────────────────────────────────────────────────────────
  Add a workspace file                                                                    
  No matching workspace files                                                             
──────────────────────────────────────────────────────────────────────────────────────────
@                                                                                         
──────────────────────────────────────────────────────────────────────────────────────────
◌ connecting · model — · branch — · session —
