sylvander-tui/tests/snapshots/snapshots__full_panel_at_user_terminal_size_140x40.snap
---
source: sylvander-tui/tests/snapshots.rs
assertion_line: 782
expression: "render_buf(s, 140, 40)"
---
  > Add JWT auth middleware                                                                                                                 
  ◌ Run `ls`     00s                                                                                                                        
    ⎿ ✓ $ ls src/http  router.rs                                                                                                            
    ⎿ ◌ Read src/http/middleware.rs                                                                                                         
                                                                                                                                            
  ● Inspecting the existing router to understand the auth surface. I see we have a TokenGuard already — let me                              
    check it covers Bearer + API-key.                                                                                                       
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
>                                                                                                                                           
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
◌ working · model — · branch — · session — · 0 tok · cost — · 2 tools                                                 esc interrupt   /draft
