sylvander-tui/tests/snapshots/snapshots__help_is_a_visible_interaction_surface.snap
---
source: sylvander-tui/tests/snapshots.rs
expression: "render_buf(&state, 110, 30)"
---
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                  ┌ Sylvander help ────────────────────────────────────────────────────────┐                  
                  │Tool activity                                                           │                  
                  │                                                                        │                  
                  │compact             one semantic target and result summary              │                  
                  │expanded            structured input plus up to 12 result rows          │                  
                  │Ctrl+O              toggle compact and expanded modes                   │                  
                  │call ID             pairs concurrent results with the correct call      │                  
                  │amber result        tool returned an error                              │                  
                  │                                                                        │                  
                  │Esc close                                                               │                  
                  │                                                                        │                  
                  │                                                                        │                  
                  │                                                                        │                  
                  │                                                                        │                  
                  │                                                                        │                  
                  └────────────────────────────────────────────────────────────────────────┘                  
                                                                                                              
                                                                                                              
                                                                                                              
──────────────────────────────────────────────────────────────────────────────────────────────────────────────
>                                                                                                             
──────────────────────────────────────────────────────────────────────────────────────────────────────────────
◌ connecting · model — · branch — · session — · 0 tok                                connecting…   draft local
