sylvander-tui/tests/snapshots/snapshots__layout_compact_width_keeps_primary_interaction.snap
---
source: sylvander-tui/tests/snapshots.rs
expression: "render_buf(s, 40, 20)"
---
 ⣩⣶⣆⡀⣿⣿⣯⡘⠿ ⠸⠟⣠⣿⣿⡻⣠⣄⡀                    
⢾⣟⢻⠇⢋⣿⡾⢻⡿⣷⡆⣾⡿⣿⡿⣾⣯⠹⡿⣿⡄                   
 ⠁   ⠋ ⠈      ⠁⠈⠋  ⠘                    
                                        
Sylvander                               
agent workspace                         
                                        
model     —                             
workspace ~/workspace                   
branch    — · session new               
What should we work through?            
                                        
                                        
❯ Add JWT auth.                         
                                        
⏺ Inspecting router.                    
────────────────────────────────────────
❯                                       
────────────────────────────────────────
· idle · model — · branch — · session —
