sylvander-tui/tests/snapshots/snapshots__layout_narrow_breakpoint_drops_meta.snap
---
source: sylvander-tui/tests/snapshots.rs
expression: "render_buf(&s, 70, 22)"
---
Connected · Connected                                                 
You: Add JWT auth.                                                    
Inspecting router.                                                    
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
──────────────────────────────────────────────────────────────────────
>                                                                     
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
Enter:send  Esc:quit
